--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
         <script src="scripts/controllers/user-list.js"></script>
         <script src="scripts/controllers/user-detail.js"></script>
         <script src="scripts/controllers/user-withdraw.js"></script>
+        <script src="scripts/services/session-info.js"></script>
+        <script src="scripts/services/session-service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
